dataset1235/2025-2/1153765216/users/896391410/executions/2814675586_3198308593.log
== SUBMISSION (2025-08-26 19:53:34)
-- CODE: 
raio = float(input())
pi  = float(input())
volume = 4/3 * pi * raio * 3
print(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:12:51)
-- CODE: 
raio = float(input())
volume = 4 / 3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 3
    print(round(volume,4)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:54:38)
-- CODE: 
raio = float(input())
pi  = float(input())
volume = 4/3 * pi * raio ** 3
print(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:54:16)
-- CODE: 
raio = float(input())
pi  = float(input())
volume = 4/3 * pi * raio *** 3
print(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 3
    volume = 4/3 * pi * raio *** 3
                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 3
    volume = 4/3 * pi * raio *** 3
                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 3
    volume = 4/3 * pi * raio *** 3
                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 3
    volume = 4/3 * pi * raio *** 3
                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 3
    volume = 4/3 * pi * raio *** 3
                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 3
    volume = 4/3 * pi * raio *** 3
                               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:53:15)
-- CODE: 
raio = float(input())
pi  = float(input())
volume = 4/3 * pi * raio * 3
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:25:19)
-- CODE: 
raio = float(input())
volume = 4/3 * pi * raio**3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio**3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio**3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio**3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio**3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio**3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio**3  
                   ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:54:24)
-- CODE: 
raio = float(input())
pi  = float(input())
volume = 4/3 * pi * raio ** 3
print(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi  = float(input())
                ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:13:04)
-- CODE: 
raio = float(input())
volume = 4 / 3 * pi * raio * 3  
print(round(volume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
